# TooGoodToGoNotifier

./: .gitignore  example.env  main.py  requirements.txt  setup.cfg
src/TooGoodToGoNotifier/: emailSender.py  exceptions.py  main.py  notifierSender.py  tooGoodToGoClient.py  utils.py
src/tooGoodToGoNotifier/: jsonDb.py  main.py  notifierSender.py  tooGoodToGoClient.py  utils.py
tests/: available.json  test_TooGoodToGoClient.py  test_emailSender.py  test_utils.py
